packages/special-pages/pages/onboarding/app/components/v3/Heading.module.css
.heading {
    display: inline-grid;
    grid-template-columns: var(--sp-16) auto;
    justify-self: start;
}

.headingContents {
    padding: calc(18 * var(--px-in-rem)) var(--sp-6);
    display: grid;
    gap: var(--sp-3);
}

.title { /* TODO: Windows */
    font-size: var(--sp-7);
    font-family: ui-rounded, 'SF Pro Rounded', 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT', 'Arial Rounded MT Bold', Calibri, source-sans-pro, sans-serif;
    line-height: var(--sp-8);
    font-weight: 700;
}

.subTitle { /* TODO: Windows */
    font-size: var(--sp-4);
    font-weight: 400;
    line-height: 1.25;
    transition: opacity .3s ease-in-out;
}

.svg {
    width: var(--sp-16);
    height: var(--sp-16);
    border-radius: 50%;
    box-shadow: 0px 0px 1px 0px rgba(62, 34, 140, 0.06), 0px 8px 24px 0px rgba(62, 34, 140, 0.06), 0px 32px 96px 0px rgba(30, 66, 164, 0.09);

    animation-name: dax-bouncein;
    animation-duration: 500ms;
    animation-fill-mode: both;
    animation-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);

    /* &[data-delay="normal"] {
        animation-delay: var(--anim-delay);
    }

    &[data-delay="double"] {
        animation-delay: var(--anim-delay-double);
    } */
}

@keyframes dax-bouncein {
    0% {
        transform: scale(0.5);
        opacity: 0;
    }
    33% {
        transform: scale(1.4);
        opacity: 1;
    }
    60% {
        transform: scale(0.9);
    }
    85% {
        transform: scale(1.1);
    }
    100% {
        transform: scale(1);
    }
}

/* Speech Bubble */

.speechBubble {
    display: inline-grid;
    grid-template-columns: var(--sp-8) auto;
    filter: drop-shadow(0px 0px 1px rgba(255, 255, 255, 0.12)) drop-shadow(0px 8px 24px rgba(62, 34, 140, 0.06)) drop-shadow(0px 8px 32px rgba(30, 66, 164, 0.09));

    @media (prefers-color-scheme: dark) {
        filter: drop-shadow(0px 0px 1px rgba(255, 255, 255, 0.18)) drop-shadow(0px 8px 24px rgba(7, 0, 25, 0.06)) drop-shadow(0px 8px 32px rgba(5, 17, 51, 0.09));
    }
}

.speechBubbleCallout {
    backdrop-filter: blur(var(--sp-16));
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.84) 0%, rgba(255, 255, 255, 0.60) 100%);
    mask-image: url('../../../src/assets/img/speech-callout-mask.svg');
    mask-position: right var(--sp-8);
    mask-repeat: no-repeat;

    @media (prefers-color-scheme: dark) {
        background: linear-gradient(180deg, #333 0%, rgba(51, 51, 51, 0.72) 100%);
    }
}

.speechBubbleContainer {
    position: relative;
}

.speechBubbleBackground {
    backdrop-filter: blur(var(--sp-16));
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.84) 0%, rgba(255, 255, 255, 0.60) 100%);
    border-radius: var(--sp-6);
    box-sizing: content-box;
    min-height: var(--sp-24);
    padding: 0 var(--sp-7);
    position: absolute;
    transition: all 300ms ease-in-out;
    z-index: 1000;

    @media (prefers-color-scheme: dark) {
        background: linear-gradient(180deg, #333 0%, rgba(51, 51, 51, 0.72) 100%);
    }
}

.speechBubbleContents {
    align-items: center;
    color: var(--color-black-at-84);
    display: grid;
    gap: var(--sp-3);
    height: auto;
    justify-items: start;
    min-height: var(--sp-24);
    padding: var(--sp-6) var(--sp-7);
    position: relative;
    width: auto;
    z-index: 100000;

    @media (prefers-color-scheme: dark) {
        color: var(--color-white-at-84);
    }

    & .title { /* TODO: Windows */
        font-size: var(--sp-5);
        line-height: 1.2;
        font-weight: 600;
    }
}

.additionalContent {
    padding-top: var(--sp-3);
}

.hidden {
    visibility: hidden;
    opacity: 0;
}

